--- a/WebApplication1/Views/tareas/sugerirtarea.cshtml
+++ b/WebApplication1/Views/tareas/sugerirtarea.cshtml
@@ -47,6 +47,7 @@
         </div>
         <!-- end back button -->
 
+
         <div class="row">
 
             <div class="col-12">
@@ -60,9 +61,9 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="20" class="form-control soloTexto" name="task_name" type="text" required
-                                           data-toggle="tooltip" title="Nombre de la tarea"
-                                           value="" placeholder="Nombre" id="task-name-input">
+                                    <input maxlength="20" class="form-control" type="text" value="" name="task_name" required
+                                           data-toggle="tooltip" title="Nombre del la tarea"
+                                           placeholder="Nombre" id="example-email-input">
                                     <small class="form-text text-muted">Nombre de la tarea</small>
                                 </div>
                             </div>
@@ -70,20 +71,10 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
                                 <div class="col-sm-9">
-                                    <textarea maxlength="40" class="form-control" rows="3" placeholder="Descripción"
+                                    <textarea required maxlength="90" class="form-control" rows="3" name="description"
                                               data-toggle="tooltip" title="Descripción de la tarea"
-                                              name="description"></textarea>
+                                              placeholder="Descripción"></textarea>
                                     <small class="form-text text-muted">Descripción de la tarea</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Comentarios</label>
-                                <div class="col-sm-9">
-                                    <textarea maxlength="40" class="form-control" rows="3" placeholder="Comentarios"
-                                              data-toggle="tooltip" title="Comentarios del administrador"
-                                              name="commentary"></textarea>
-                                    <small class="form-text text-muted">Comentarios del administrador</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -92,32 +83,60 @@
                                 <div class="col-sm-9">
                                     <input maxlength="20" class="form-control" type="text" value="" required
                                            data-toggle="tooltip" title="Nombre de la persona responsable"
-                                           placeholder="Responsable" name="responsable" id="example-lastname1-input">
+                                           name="responsable" placeholder="Responsable" id="example-lastname1-input">
                                     <small class="form-text text-muted">Nombre de la persona responsable</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-date-input" class="col-sm-3 col-form-label">Fecha</label>
-                                <div class="col-sm-4">
-                                    <input class="form-control" type="date" autocomplete="off"
-                                           data-toggle="tooltip"  title="Mes / día / año | Fecha de registro de la tarea"
-                                           name="start_date" required
-                                           value="" id="example-date-input">
+                                <div class="col-sm-9">
+                                    <input autocomplete="off" class="form-control" type="date" required
+                                           data-toggle="tooltip" title="Mes / día / año | Fecha de registro de la tarea"
+                                           value="" name="task_date" id="example-date-input">
                                     <small class="form-text text-muted">Mes / día / año | Fecha de registro de la tarea</small>
                                 </div>
-                            </div>                            
+                            </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-time-input" class="col-sm-3 col-form-label">Hora</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="time" value="" required
+                                    <input autocomplete="off" class="form-control" type="time" required
                                            data-toggle="tooltip" title="Hora de registro de la tarea"
-                                           id="example-time-input" name="start_time">
+                                           value="" name="task_time" id="example-time-input">
                                     <small class="form-text text-muted">Hora de registro de la tarea</small>
                                 </div>
                             </div>
-
+                            <div class="form-divider"></div>
+                            <h6 class="mt-0 header-title">Estimado de tiempo</h6>
+                            <div class="form-group row">
+                                <label for="example-date-input" class="col-sm-3 col-form-label">Fecha</label>
+                                <div class="col-sm-9">
+                                    <input autocomplete="off" class="form-control" type="date" required
+                                           data-toggle="tooltip" title="Mes / día / año | Fecha de registro de la tarea"
+                                           name="estimated_date" value="" id="example-date-input-PA">
+                                    <small class="form-text text-muted">Mes / día / año | Fecha de registro de la tarea</small>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="example-time-input" class="col-sm-3 col-form-label">Hora</label>
+                                <div class="col-sm-9">
+                                    <input autocomplete="off" class="form-control" type="time" required
+                                           data-toggle="tooltip" title="Hora de registro de la tarea"
+                                           name="estimated_time" value="" id="example-time-input">
+                                    <small class="form-text text-muted">Hora de registro de la tarea</small>
+                                </div>
+                            </div>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Comentarios</label>
+                                <div class="col-sm-9">
+                                    <textarea required class="form-control" rows="3" name="comments"
+                                              data-toggle="tooltip" title="Comentarios del administrador"
+                                              placeholder="Comentarios"></textarea>
+                                    <small class="form-text text-muted">Comentarios del administrador</small>
+                                </div>
+                            </div>                                                        
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="@Url.Action("listado", "tareas")"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
